--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PicByAdam - Professional Photography</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="favicon.ico?" />
 </head>
 <body>
     
+    <nav class="navbar">
+        <img class="navbar-brand" src="img/logo(transparent).png" />
+        <ul class="nav-list">
+            <li class="nav-item">
+                <a href="/" class="nav-link">Home</a>
+                <a href="#" class="nav-link">About Us</a>
+                <a href="#" class="nav-link">Services</a>
+                <a href="#" class="nav-link">Portfolio</a>
+                <a href="#" class="nav-link">Contact</a>
+                <a href="#" class="nav-link">FAQ</a>
+                <a href="#" class="nav-link">Testimonials</a>
+                <a href="#" class="nav-link">Blog</a>
+            </li>
+        </ul>
+    </nav>
+
 </body>
 </html>
