--- a/index.html
+++ b/index.html
@@ -11,19 +11,50 @@
     
     <nav class="navbar">
         <img class="navbar-brand" src="img/logo(transparent).png" />
+
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="/" class="nav-link">Home</a>
+                <a href="/" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">FAQ</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">Testimonials</a>
+            </li>
+            <li class="nav-item">
                 <a href="#" class="nav-link">Blog</a>
             </li>
         </ul>
     </nav>
+
+    <header class="home-header">
+
+        <div class="text-container">
+
+            <h2 class="small-heading"><span class="blue">Elevate</span> Your <span class="blue">Business</span> With</h2>
+
+            <h1 class="big-heading">Photos that</h1>
+
+            <h1 class="big-heading primary">Matter</h1>
+
+            <a href="#work" class="btn primary">Learn More</a>
+
+        </div>
+
+    </header>
 
 </body>
 </html>
