--- a/index.html
+++ b/index.html
@@ -58,5 +58,15 @@
         
     </header>
 
+    <section class="work" id="work">
+
+        <h2 class="work-heading">We bring stories to life in under 24 hours</h2>
+
+        <div class="divider"></div>
+
+        <p class="text">We help you elevate your company's social media presence through compelling photography that attracts and engages with new and existing customers. From shoot to finished delivered photos in under 24 hours, we leave our clients excited to work with us again.</p>
+
+    </section>
+
 </body>
 </html>
