--- a/index.html
+++ b/index.html
@@ -90,7 +90,19 @@
 
         <div class="divider"></div>
 
-        <p class="text">We help you elevate your company's social media presence through compelling photography that attracts and engages with new and existing customers. From shoot to finished delivered photos in under 24 hours, we leave our clients excited to work with us again.</p>
+        <p class="text">
+            We help you elevate your company's social media presence through compelling photography that attracts and engages with new and existing customers. 
+            From shoot to finished delivered photos in under 24 hours, we leave our clients excited to work with us again.
+        </p>
+
+        <div class="carousel">
+            <div class="image-placeholder image-1"></div>
+            <div class="image-placeholder image-2"></div>
+            <div class="image-placeholder image-3"></div>
+            <div class="image-placeholder image-4"></div>
+            <div class="image-placeholder image-5"></div>
+            <div class="image-placeholder image-6"></div>
+        </div>
 
     </section>
 
