--- a/index.html
+++ b/index.html
@@ -96,15 +96,57 @@
         </p>
 
         <div class="carousel">
-            <div class="image-placeholder image-1"></div>
-            <div class="image-placeholder image-2"></div>
-            <div class="image-placeholder image-3"></div>
-            <div class="image-placeholder image-4"></div>
-            <div class="image-placeholder image-5"></div>
-            <div class="image-placeholder image-6"></div>
+            <img src="./img/work/IMG_2084-min.jpg" alt="Image" class="carousel-image image-1">
+            <img src="./img/work/IMG_1818-Edit-min.jpg" alt="Image" class="carousel-image image-2">
+            <img src="./img/work/Mic Photo-min.jpg" alt="Image" class="carousel-image image-3">
+            <img src="./img/work/Meatball Uncooked-min.jpg" alt="Image" class="carousel-image image-4">
+            <img src="./img/work/IMG_2346-2-min.jpg" alt="Image" class="carousel-image image-5">
+            <img src="./img/work/Portrait of Myself-min.jpg" alt="Image" class="carousel-image image-6">
         </div>
 
+        <a href="./" class="btn light">Our Work</a>
+
     </section>
+
+    <section class="about-section">
+
+        <article class="text-section">
+
+            <h2 class="title">About <span class="primary">Us</span></h2>
+
+            <p class="text">
+                Hey. I'm <b>Adam</b>, take a seat, get comfy and let's get down to business... Running a company is hard. What's harder? 
+                Having to worry about taking awesome photos that tell your story on top of that. We take that stress away.
+                <br><br>
+                We specilise in Social Media Photography. Photos that make your online presence pop. We help you attract 
+                customers and build a brand people love by capturing authentic, yet stunning moments that encompass all 
+                the values your company holds dear.
+            </p>
+
+            <a class="btn primary-filled" href="#">Our Work</a>
+
+        </article>
+
+        <section class="image-section">
+            <img src="./img/work/IMG_2093-min.jpg" alt="Adam holding Camera" class="logo">
+        </section>
+
+    </section>
+
+    <!-- <section class="contact-section">
+
+        <h2 class="title">Get In Touch</h2>
+
+        <form class="contact-form">
+
+            <div class="form-group grid">
+
+                <input type="text" class="input" placeholder="" />
+
+            </div>
+        </form>
+
+    </section> -->
 
     <script src="./js/main.js"></script>
 
