--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     </section>
 
-    <!-- <section class="contact-section">
+    <section class="contact-section">
 
         <h2 class="title">Get In Touch</h2>
 
@@ -141,12 +141,33 @@
 
             <div class="form-group grid">
 
-                <input type="text" class="input" placeholder="" />
+                <input type="text" class="input" name="firstname" placeholder="First Name" id="first-name" />
+
+                <input type="text" class="input" name="company" placeholder="Company (Optional)" id="company" />
 
             </div>
+
+            <div class="form-group">
+
+                <input type="email" class="input" name="email" id="email" placeholder="Email">
+
+            </div>
+
+            <div class="form-group">
+
+                <textarea name="message" id="message" cols="30" rows="10" class="input input-textarea" placeholder="Type your message"></textarea>
+
+            </div>
+
+            <div class="form-group">
+
+                <button type="submit" class="btn light">Submit</button>
+
+            </div>
+            
         </form>
 
-    </section> -->
+    </section>
 
     <script src="./js/main.js"></script>
 
