--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
         </p>
 
         <div class="carousel">
-            <img src="./img/work/IMG_2084-min.jpg" alt="Image" class="carousel-image image-1">
-            <img src="./img/work/IMG_1818-Edit-min.jpg" alt="Image" class="carousel-image image-2">
-            <img src="./img/work/Mic Photo-min.jpg" alt="Image" class="carousel-image image-3">
-            <img src="./img/work/Meatball Uncooked-min.jpg" alt="Image" class="carousel-image image-4">
-            <img src="./img/work/IMG_2346-2-min.jpg" alt="Image" class="carousel-image image-5">
-            <img src="./img/work/Portrait of Myself-min.jpg" alt="Image" class="carousel-image image-6">
+            <img src="./img/work/IMG_2084-min.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/IMG_1818-Edit-min.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Mic Photo-min.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Meatball Uncooked-min.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/IMG_2346-2-min.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Portrait of Myself-min.jpg" alt="Image" class="carousel-image">
         </div>
 
         <a href="./" class="btn light">Our Work</a>
@@ -164,11 +164,10 @@
                 <button type="submit" class="btn light">Submit</button>
 
             </div>
-            
+
         </form>
 
     </section>
-
     <script src="./js/main.js"></script>
 
 </body>
