--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
         </p>
 
         <div class="carousel">
-            <img src="./img/work/IMG_2084-min.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/IMG_1818-Edit-min.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/Mic Photo-min.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/Meatball Uncooked-min.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/IMG_2346-2-min.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/Portrait of Myself-min.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/IMG_2084-min.jpg" alt="Person In Car" class="carousel-image">
+            <img src="./img/work/IMG_1818-Edit-min.jpg" alt="Person On Bench At Night" class="carousel-image">
+            <img src="./img/work/Mic Photo-min.jpg" alt="Blue Yeti Microphone" class="carousel-image">
+            <img src="./img/work/Meatball Uncooked-min.jpg" alt="Meatballs Uncooked" class="carousel-image">
+            <img src="./img/work/IMG_2346-2-min.jpg" alt="Grilled Chicken Breast" class="carousel-image">
+            <img src="./img/work/Portrait of Myself-min.jpg" alt="Adam on chair" class="carousel-image">
         </div>
 
         <a href="./" class="btn light">Our Work</a>
