Updated Home Page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav class="navbar">
 
-        <img class="navbar-brand" src="img/logo(transparent).png" />
+        <img class="navbar-brand" src="img/logo(transparent).png" alt="PicByAdam Logo" />
 
         <ul class="nav-list">
 
@@ -24,7 +24,7 @@
 
             <li class="nav-item">
 
-                <a href="#" class="nav-link">About Us</a>
+                <a href="/about" class="nav-link">About Us</a>
 
             </li>
 
