--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,6 +109,8 @@
 
         </div>
 
+        <div class="overlay" id="overlay"></div>
+
     </section>
 
     <footer class="large-footer">
@@ -259,5 +261,7 @@
 
     </footer>
 
+    <script src="../js/main.js"></script>
+    
 </body>
 </html>
