Added Link to Our Work Button

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <img src="./img/work/Portrait of Myself-min.jpg" alt="Adam on chair" class="carousel-image">
         </div>
 
-        <a href="./" class="btn light">Our Work</a>
+        <a href="./portfolio/" class="btn light">Our Work</a>
 
     </section>
 
