Added Pop Up Functionality

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -261,6 +261,29 @@
 
     </footer>
 
+    <script>
+
+        window.addEventListener('load', () => {
+
+            const workImages = document.querySelectorAll('.work-img');
+            const overlay = document.querySelector('#overlay');
+
+            workImages.forEach(image => {
+                image.addEventListener('click', () => {
+                    image.classList.add('active');
+                    overlay.style.display = "block";
+                });
+            });
+
+            overlay.addEventListener('click', () => {
+                document.querySelector('.work-img.active').classList.remove('active');
+                overlay.style.display = "none";
+            });
+
+        })
+
+    </script>
+    
     <script src="../js/main.js"></script>
     
 </body>
