--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@
 
     <script>
 
-        /* Load In Animation
+        // Load In Animation
         gsap.from(".navbar", { opacity: 0, duration: .5, y: -50 })
         gsap.from(".anim1", { opacity: 0, duration: 1, stagger: 0.3, y: -30, delay: .75 });
         gsap.from(".camera", { opacity: 0, duration: 1, y: 50, delay: .75 });
         gsap.from(".work-heading", { opacity: 0, duration: 1, y: 50, delay: 1.25 });
         gsap.from(".divider", { opacity: 0, duration: 1, y: 50, delay: 1.25 });
         
-        */
+        
 
     </script>
 
