--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -147,18 +147,18 @@
 
         <div class="work-grid">
 
-            <img src="../img/work/Drinks on the Beach-min.jpg" alt="" class="work-img">
-            <img src="../img/work/IMG_1618-min.jpg" alt="" class="work-img">
-            <img src="../img/work/IMG_1818-Edit-min.jpg" alt="" class="work-img">
-            <img src="../img/work/IMG_2084-min.jpg" alt="" class="work-img">
-            <img src="../img/work/IMG_2093-min.jpg" alt="" class="work-img">
-            <img src="../img/work/IMG_2172-2-min.jpg" alt="" class="work-img">
-            <img src="../img/work/IMG_2346-2-min.jpg" alt="" class="work-img">
-            <img src="../img/work/Mic Photo-min.jpg" alt="" class="work-img">
-            <img src="../img/work/Meatballs-min.jpg" alt="" class="work-img">
-            <img src="../img/work/Portrait of Myself-min.jpg" alt="" class="work-img">
-            <img src="../img/work/Meatball Uncooked-min.jpg" alt="" class="work-img">
-            <img src="../img/work/steak'n'beans.jpg" alt="" class="work-img">
+            <img src="../img/work/1.jpg" alt="" class="work-img">
+            <img src="../img/work/2.jpg" alt="" class="work-img">
+            <img src="../img/work/3.jpg" alt="" class="work-img">
+            <img src="../img/work/4.jpg" alt="" class="work-img">
+            <img src="../img/work/5.jpg" alt="" class="work-img">
+            <img src="../img/work/6.jpg" alt="" class="work-img">
+            <img src="../img/work/7.jpg" alt="" class="work-img">
+            <img src="../img/work/8.jpg" alt="" class="work-img">
+            <img src="../img/work/9.jpg" alt="" class="work-img">
+            <img src="../img/work/10.jpg" alt="" class="work-img">
+            <img src="../img/work/11.jpg" alt="" class="work-img">
+            <img src="../img/work/12.jpg" alt="" class="work-img">
 
         </div>
 
