Added Href to Our Work Button

--- a/about/index.html
+++ b/about/index.html
@@ -144,7 +144,7 @@
                 stunning moments that encompass all the values your company holds dear.
             </p>
 
-            <a href="#" class="btn primary-filled">Our Work</a>
+            <a href="/portfolio/" class="btn primary-filled">Our Work</a>
 
         </div>
 
