--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 the values your company holds dear.
             </p>
 
-            <a class="btn primary-filled" href="#">Our Work</a>
+            <a class="btn primary-filled" href="/portfolio/">Our Work</a>
 
         </article>
 
