Added HREF to Get In Touch Button

--- a/services/index.html
+++ b/services/index.html
@@ -184,7 +184,7 @@
 
         </div>
 
-        <a href="#" class="btn light">Get In Touch</a>
+        <a href="/#contact" class="btn light">Get In Touch</a>
 
     </section>
 
