Added HREF to Get In Touch Button

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,7 +141,7 @@
                 our skillset to collaborate on your next project. Feel free to get in touch today.
             </p>
 
-            <a href="#" class="btn primary-filled">Get In Touch</a>
+            <a href="/#contact" class="btn primary-filled">Get In Touch</a>
 
         </div>
 
