--- a/index.html
+++ b/index.html
@@ -243,19 +243,19 @@
 
                         <li class="list-item">
 
-                            <a href="#" class="list-link">Services</a>
+                            <a href="/services/" class="list-link">Services</a>
 
                         </li>
 
                         <li class="list-item">
 
-                            <a href="#" class="list-link">Portfolio</a>
+                            <a href="/portfolio/" class="list-link">Portfolio</a>
                             
                         </li>
 
                         <li class="list-item">
 
-                            <a href="#" class="list-link">Contact</a>
+                            <a href="#contact" class="list-link">Contact</a>
                             
                         </li>
 
