Added Formspree links to form

--- a/coming-soon/index.html
+++ b/coming-soon/index.html
@@ -135,7 +135,7 @@
 
         </p>
         
-        <form class="email-form">
+        <form class="email-form" action="https://formspree.io/f/xeqppwaq" method="POST">
 
             <input type="email" class="input" placeholder="Enter your email here">
 
