--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
                         <li class="list-item">
 
-                            <a href="#contact" class="list-link">Contact</a>
+                            <a href="/#contact" class="list-link">Contact</a>
                             
                         </li>
 
