Added link to button

--- a/about/index.html
+++ b/about/index.html
@@ -156,7 +156,7 @@
 
                 <i class="icon far fa-paper-plane"></i>
 
-                <span class="text">hello@picbyadam.com</span>
+                <span class="text">hello@picbyadam.net</span>
 
             </div>
 
@@ -178,7 +178,7 @@
 
         </div>
 
-        <button class="btn light">Lets Work Together</button>
+        <a href="/#contact" class="btn light">Lets Work Together</a>
         
     </section>
 
