--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -157,7 +157,7 @@
                 <h3 class="name">Shane, K</h3>
                 
                 <p class="text">
-                    The entire processed was streamlined so efficiently. There was no endless wait weeks on end, there was no hassle. Thank you for being awesome.
+                    The entire process was streamlined so efficiently. There was no endless wait weeks on end, there was no hassle. Thank you for being awesome.
                 </p>
 
                 <i class="fas fa-quote-right quote-icon"></i>
