--- a/about/index.html
+++ b/about/index.html
@@ -127,7 +127,7 @@
             <h1 class="title">Let's <span class="primary">Introduce</span> Ourselves</h1>
 
             <p class="about-text">
-                Hey. I'm <b>Adam</b>, take a seat, get comfy and let's get down to business... 
+                Take a seat, get comfy and let's get down to business... 
                 Running a company is hard. What's harder? Having to worry about taking awesome photos that 
                 tell your story on top of that. We take that stress away.
 
