--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <h2 class="title">About <span class="primary">Us</span></h2>
 
             <p class="text">
-                Hey. I'm <b>Adam</b>, take a seat, get comfy and let's get down to business... Running a company is hard. What's harder? 
+                Take a seat, get comfy and let's get down to business... Running a company is hard. What's harder? 
                 Having to worry about taking awesome photos that tell your story on top of that. We take that stress away.
                 <br><br>
                 We specilise in Social Media Photography. Photos that make your online presence pop. We help you attract 
