Added span around words to be bolded

--- a/faq/index.html
+++ b/faq/index.html
@@ -197,7 +197,7 @@
 
             <p class="question-content">
 
-                Whether you're looking to capture plates, products or people... the avenues of possibility are endless.
+                Whether you're looking to capture <span class="emphasise">plates</span>, <span class="emphasise">products</span> or <span class="emphasise">people</span>... the avenues of possibility are endless.
     ​            <br><br>
                 Reach out to us, we're always expanding our portfolio and skillset so if your project is not in our specific wheel house, we'd love to work out a discounted rate and work with you to create something you're proud of.
             
