Added instagram link to @PicByAdam

--- a/about/index.html
+++ b/about/index.html
@@ -172,7 +172,7 @@
 
                 <i class="icon fab fa-instagram"></i>
 
-                <span class="text">Peep The Instagram: <a class="link" href="#">@PicByAdam</a></span>
+                <span class="text">Peep The Instagram: <a class="link" href="https://www.instagram.com/picbyadam" target="_blank">@PicByAdam</a></span>
                 
             </div>
 
