--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,6 +141,48 @@
 
         <div class="work-grid">
 
+            <div class="category first">
+
+                <div class="lines">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+
+                <h2 class="category-title">Plates</h2>
+
+                <i class="far fa-play-circle play-icon"></i>
+
+            </div>
+
+            <div class="category second">
+
+                <div class="lines">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+
+                <h2 class="category-title">Products</h2>
+
+                <i class="far fa-play-circle play-icon"></i>
+
+            </div>
+
+            <div class="category third">
+
+                <div class="lines">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+
+                <h2 class="category-title">People</h2>
+
+                <i class="far fa-play-circle play-icon"></i>
+
+            </div>
+
         </div>
 
     </section>
