Made Categories Links

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,7 +141,7 @@
 
         <div class="work-grid">
 
-            <div class="category first">
+            <a href="/portfolio/plates" class="category first">
 
                 <div class="lines">
                     <div class="line"></div>
@@ -151,11 +151,11 @@
 
                 <h2 class="category-title">Plates</h2>
 
-                <i class="far fa-play-circle play-icon"></i>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
 
-            </div>
+            </a>
 
-            <div class="category second">
+            <a href="/portfolio/products" class="category second">
 
                 <div class="lines">
                     <div class="line"></div>
@@ -165,11 +165,11 @@
 
                 <h2 class="category-title">Products</h2>
 
-                <i class="far fa-play-circle play-icon"></i>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
 
-            </div>
+            </a>
 
-            <div class="category third">
+            <a href="/portfolio/people" class="category third">
 
                 <div class="lines">
                     <div class="line"></div>
@@ -179,9 +179,9 @@
 
                 <h2 class="category-title">People</h2>
 
-                <i class="far fa-play-circle play-icon"></i>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
 
-            </div>
+            </a>
 
         </div>
 
