Fixed Home Page Images

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
         </p>
 
         <div class="carousel">
-            <img src="./img/work/1.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/11.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/3.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/7.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/5.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/6.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Portrait & Lifestyle/1.jpeg" alt="Image" class="carousel-image">
+            <img src="./img/work/Restaurant & Food/4.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Product/nike-3.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Portrait & Lifestyle/5.jpeg" alt="Image" class="carousel-image">
+            <img src="./img/work/Product/camera-2.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Product/headset.jpg" alt="Image" class="carousel-image">
         </div>
 
         <a href="./portfolio/" class="btn light">Our Work</a>
@@ -176,7 +176,7 @@
         </article>
 
         <section class="image-section">
-            <img src="./img/work/IMG_2093-min.jpg" alt="Adam holding Camera" class="logo">
+            <img src="./img/work/Product/turtle-1.jpeg" alt="Adam holding Camera" class="logo">
         </section>
 
     </section>
