Updated People Page

--- a/portfolio/people/index.html
+++ b/portfolio/people/index.html
@@ -146,6 +146,29 @@
 
     </section>
 
+    <section class="portfolio-work-section">
+
+        <div class="work-grid">
+            
+            <img src="../../img/work/Portrait & Lifestyle/1.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/2.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/3.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/4.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/5.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/6.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/7.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/8.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/13.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/10.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/11.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Portrait & Lifestyle/12.jpg" alt="" class="work-image">
+
+        </div>
+
+        <a href="/#contact" class="btn primary">Work With Us</a>
+
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     
