Updated Portfolio Page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -139,7 +139,7 @@
 
         </div>
 
-        <div class="work-grid">
+        <div class="category-grid">
 
             <a href="/portfolio/plates" class="category first">
 
