Added Where Are You Located Question

--- a/faq/index.html
+++ b/faq/index.html
@@ -217,6 +217,17 @@
 
         </details>
 
+        <details>
+            
+            <summary class="question-title">Where Are You Located?</summary>
+
+            <p class="question-content">
+
+                We're located in Brisbane, Australia however we shoot across the Sunshine Coast & the Gold Coast as well. Get In Touch if you're located in surrounding areas and want to inquire about a photo shoot.
+            </p>
+
+        </details>
+
         <a href="/#contact" class="btn primary">Get In Touch</a>
 
     </section>
