Adjusted Page Content

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <div class="text-container">
 
-            <h2 class="small-heading anim1"><span class="blue">Elevate</span> Your <span class="blue">Business</span> With</h2>
+            <h2 class="small-heading anim1"><span class="blue">Elevate</span> Your <span class="blue">Brand</span> With</h2>
 
             <h1 class="big-heading anim1">Photos that</h1>
 
@@ -139,8 +139,8 @@
         <div class="divider"></div>
 
         <p class="text">
-            We help you elevate your company's social media presence through compelling photography that attracts and engages with new and existing customers. 
-            From shoot to finished delivered photos in under 24 hours, we leave our clients excited to work with us again.
+            We help you elevate your brand's social media presence through compelling photography that attracts and engages with new and existing customers. 
+            From shoot to finished delivered photos in under 24 hours, we leave our clients across Brisbane, Australia excited to work with us again.
         </p>
 
         <div class="carousel">
