--- a/services/index.html
+++ b/services/index.html
@@ -116,7 +116,7 @@
 
     <header class="header-w-divider">
 
-        <h1 class="page-title">Elevate Your Business</h1>
+        <h1 class="page-title">Elevate Your Brand</h1>
 
         <div class="divider"></div>
 
