Updated About Image

--- a/about/index.html
+++ b/about/index.html
@@ -142,7 +142,7 @@
 
         </div>
 
-        <img src="../img/Me About.png" alt="Adam" class="adam-img">
+        <img src="../img/Me About 2.png" alt="Adam" class="adam-img">
 
     </section>
 
