--- a/portfolio/plates/index.html
+++ b/portfolio/plates/index.html
@@ -126,7 +126,7 @@
 
     <header class="header-w-divider plates-bg">
 
-        <h1 class="page-title">Restaurants & Plates</h1>
+        <h1 class="page-title">Plates & Food</h1>
 
         <div class="divider"></div>
 
