Added Link to Case Study Button

--- a/portfolio/people/index.html
+++ b/portfolio/people/index.html
@@ -146,7 +146,7 @@
 
                 <p class="case-study-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil culpa optio odit earum ullam, molestiae explicabo eveniet esse beatae. Eius ex quas reiciendis id, dolore a culpa ullam eaque sed tempore ipsum nobis deleniti deserunt tempora molestias incidunt architecto illo iure reprehenderit quos, autem voluptatem! Esse quaerat cumque voluptates aspernatur.</p>
             
-                <a href="#" class="btn primary-filled">View The Full Project</a>
+                <a href="./case-study/" class="btn primary-filled">View The Full Project</a>
 
             </div>
 
