Finished Case Study Page

--- a/portfolio/people/case-study/index.html
+++ b/portfolio/people/case-study/index.html
@@ -206,7 +206,7 @@
                 
             </div>
 
-            <button class="btn primary-filled">Work With Us</button>
+            <a href="/#contact" class="btn primary-filled">Work With Us</a>
 
         </article>
 
