Updated About Img

--- a/about/index.html
+++ b/about/index.html
@@ -152,7 +152,7 @@
 
         </div>
 
-        <img src="../img/Me About 2.png" alt="Adam" class="adam-img">
+        <img src="../img/About-3.png" alt="Adam" class="adam-img">
 
     </section>
 
