Removed Dummy Text From Case Study Section

--- a/portfolio/people/index.html
+++ b/portfolio/people/index.html
@@ -145,8 +145,13 @@
 
                 <div class="divider"></div>
 
-                <p class="case-study-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil culpa optio odit earum ullam, molestiae explicabo eveniet esse beatae. Eius ex quas reiciendis id, dolore a culpa ullam eaque sed tempore ipsum nobis deleniti deserunt tempora molestias incidunt architecto illo iure reprehenderit quos, autem voluptatem! Esse quaerat cumque voluptates aspernatur.</p>
-            
+                <p class="case-study-desc">
+                    In this case study, PicByAdam worked with Shane King to create a 
+                    series of digital content establishing the “King” Brand across platforms
+                     such as Instagram, Facebook, and Twitter. This was done through a 
+                     portrait photo series, automotive shots, and a sequence of compelling captions.
+                </p>
+
                 <a href="./case-study/" class="btn primary-filled">View The Full Project</a>
 
             </div>
