--- a/portfolio/people/case-study/index.html
+++ b/portfolio/people/case-study/index.html
@@ -198,7 +198,7 @@
 
                 <p class="text">
                     We walk into each shoot with only one goal in mind… “How can we make this experience as fun as possible for
-                    you our photographers”. Getting loose, playing music and good conversation stops our shoots from feeling 
+                    you and our photographers”. Getting loose, playing music and good conversation stops our shoots from feeling 
                     draining and boring and instead transforms them into a positive experience that makes our clients look forward
                     to working with us. This project was no different.                   
                 </p>
