--- a/portfolio/products/index.html
+++ b/portfolio/products/index.html
@@ -139,12 +139,15 @@
 
         <div class="work-grid">
             
-            <img src="../../img/work/Product/camera-2.jpg" alt="" data-collection="Camera.jpg" class="work-image">
-            <img src="../../img/work/Product/nike-3.jpg" alt="" data-collection="Nike.jpg" class="work-image">
-            <img src="../../img/work/Product/shades-2.jpeg" alt="" data-collection="Shades.jpg" class="work-image">
-            <img src="../../img/work/Product/watch-2.jpeg" alt="" data-collection="Watch.jpg" class="work-image">
-            <img src="../../img/work/Product/turtle-1.jpeg" alt="" data-collection="Turtle.jpg" class="work-image">
+            <img src="../../img/work/Product/camera-2.jpg" alt="" data-collection="Camera.png" class="work-image">
+            <img src="../../img/work/Product/nike-3.jpg" alt="" data-collection="Nike.png" class="work-image">
+            <img src="../../img/work/Product/shades-2.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Product/watch-2.jpeg" alt="" data-collection="Watch.png" class="work-image">
+            <img src="../../img/work/Product/turtle-1.jpeg" alt="" data-collection="Turtle.png" class="work-image">
             <img src="../../img/work/Product/headset.jpg" alt="" class="work-image">
+            <img src="../../img/work/Product/Wine Main.png" alt="" data-collection="Wine 2.png" class="work-image">
+            <img src="../../img/work/Product/shades.jpeg" alt="" class="work-image">
+            <img src="../../img/work/Product/Wine Aesthetic.png" alt="" data-collection="Wine 3.png" class="work-image">
 
         </div>
 
