--- a/portfolio/products/index.html
+++ b/portfolio/products/index.html
@@ -139,15 +139,18 @@
 
         <div class="work-grid">
             
-            <img src="../../img/work/Product/camera-2.jpg" alt="" data-collection="Camera.png" class="work-image">
-            <img src="../../img/work/Product/nike-3.jpg" alt="" data-collection="Nike.png" class="work-image">
-            <img src="../../img/work/Product/shades-2.jpeg" alt="" class="work-image">
-            <img src="../../img/work/Product/watch-2.jpeg" alt="" data-collection="Watch.png" class="work-image">
-            <img src="../../img/work/Product/turtle-1.jpeg" alt="" data-collection="Turtle.png" class="work-image">
-            <img src="../../img/work/Product/headset.jpg" alt="" class="work-image">
-            <img src="../../img/work/Product/Wine Main.png" alt="" data-collection="Wine 2.png" class="work-image">
-            <img src="../../img/work/Product/shades.jpeg" alt="" class="work-image">
-            <img src="../../img/work/Product/Wine Aesthetic.png" alt="" data-collection="Wine 3.png" class="work-image">
+            <img src="../../img/work/Product/1.png" alt="" class="work-image" data-collection="Nike.png">
+            <img src="../../img/work/Product/2.png" alt="" class="work-image">
+            <img src="../../img/work/Product/3.png" alt="" class="work-image">
+            <img src="../../img/work/Product/4.png" alt="" class="work-image">
+            <img src="../../img/work/Product/5.png" alt="" class="work-image">
+            <img src="../../img/work/Product/6.png" alt="" class="work-image" data-collection="Camera.png">
+            <img src="../../img/work/Product/7.png" alt="" class="work-image">
+            <img src="../../img/work/Product/8.png" alt="" class="work-image">
+            <img src="../../img/work/Product/9.png" alt="" class="work-image">
+            <img src="../../img/work/Product/10.png" alt="" class="work-image">
+            <img src="../../img/work/Product/11.png" alt="" class="work-image" data-collection="Watch.png">
+            <img src="../../img/work/Product/12.png" alt="" class="work-image">
 
         </div>
 
