--- a/portfolio/products/index.html
+++ b/portfolio/products/index.html
@@ -139,18 +139,18 @@
 
         <div class="work-grid">
             
-            <img src="../../img/work/Product/1.png" alt="" class="work-image" data-collection="Nike.png">
-            <img src="../../img/work/Product/2.png" alt="" class="work-image">
-            <img src="../../img/work/Product/3.png" alt="" class="work-image">
-            <img src="../../img/work/Product/4.png" alt="" class="work-image">
-            <img src="../../img/work/Product/5.png" alt="" class="work-image">
-            <img src="../../img/work/Product/6.png" alt="" class="work-image" data-collection="Camera.png">
-            <img src="../../img/work/Product/7.png" alt="" class="work-image">
-            <img src="../../img/work/Product/8.png" alt="" class="work-image">
-            <img src="../../img/work/Product/9.png" alt="" class="work-image">
-            <img src="../../img/work/Product/10.png" alt="" class="work-image">
-            <img src="../../img/work/Product/11.png" alt="" class="work-image" data-collection="Watch.png">
-            <img src="../../img/work/Product/12.png" alt="" class="work-image">
+            <img src="../../img/work/Product/1.jpg" alt="" class="work-image" data-collection="19.jpg">
+            <img src="../../img/work/Product/2.jpg" alt="" class="work-image" data-collection="20.jpg">
+            <img src="../../img/work/Product/3.jpg" alt="" class="work-image" data-collection="13.jpg">
+            <img src="../../img/work/Product/4.jpg" alt="" class="work-image" data-collection="16.jpg">
+            <img src="../../img/work/Product/5.jpg" alt="" class="work-image" data-collection="17.jpg">
+            <img src="../../img/work/Product/6.jpg" alt="" class="work-image" data-collection="14.jpg">
+            <img src="../../img/work/Product/7.jpg" alt="" class="work-image">
+            <img src="../../img/work/Product/8.jpg" alt="" class="work-image">
+            <img src="../../img/work/Product/9.jpg" alt="" class="work-image" data-collection="15.jpg">
+            <img src="../../img/work/Product/10.jpg" alt="" class="work-image">
+            <img src="../../img/work/Product/11.jpg" alt="" class="work-image" data-collection="18.jpg">
+            <img src="../../img/work/Product/12.jpg" alt="" class="work-image">
 
         </div>
 
