--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         <div class="carousel">
             <img src="./img/work/Portrait & Lifestyle/1.jpeg" alt="Image" class="carousel-image">
             <img src="./img/work/Restaurant & Food/4.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/Product/nike-3.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Product/1.jpg" alt="Image" class="carousel-image">
             <img src="./img/work/Portrait & Lifestyle/5.jpeg" alt="Image" class="carousel-image">
-            <img src="./img/work/Product/camera-2.jpg" alt="Image" class="carousel-image">
-            <img src="./img/work/Product/headset.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Product/2.jpg" alt="Image" class="carousel-image">
+            <img src="./img/work/Product/3.jpg" alt="Image" class="carousel-image">
         </div>
 
         <a href="./portfolio/" class="btn light">Our Work</a>
