--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <p class="text">
             We help you elevate your brand's social media presence through compelling photography that attracts and engages with new and existing customers. 
-            From shoot to finished delivered photos in under 24 hours, we leave our clients across Brisbane, Australia excited to work with us again.
+            We deliver your finalised images within 24 hours of completing the photoshot and leave our clients across Brisbane, Australia excited to work with us again.
         </p>
 
         <div class="carousel">
