--- a/services/index.html
+++ b/services/index.html
@@ -199,13 +199,13 @@
 
                 <div class="content">
 
-                    <h2 class="service-heading">Same Day Delivery</h2>
+                    <h2 class="service-heading">24 Hour Delivery</h2>
 
                     <div class="divider"></div>
 
                     <p class="service-text">We know speed is vital to you and your business. That’s why
-                        we deliver your final products within 24 hours of the original
-                        photo shoot. </p>
+                        we deliver your final products within 24 hours of completing the
+                        photo shoot.  <a href="/24-hour-disclaimer" class="link">(Disclaimer)</a></p>
 
                 </div>
 
