--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </article>
 
         <section class="image-section">
-            <img src="./img/work/Product/turtle-1.jpeg" alt="Adam holding Camera" class="logo">
+            <img src="./img/work/Product/5.jpg" alt="Adam holding Camera" class="logo">
         </section>
 
     </section>
